--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tienda-kalujerovich",
   "version": "0.1.0",
   "private": true,
+  "homepage":"http://kevinkalujerovich.github.io/Dex-React",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -20,6 +21,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
