--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tienda-kalujerovich",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://kevinkalujerovich.github.io/",
+  "homepage": "http://kevinkalujerovich.github.io/Dex-React/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
