--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "core-js": "^3.12.1",
-    "dotenv": "^8.2.0",
     "firebase": "^8.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "webpack": "^4.44.2"
+    "gh-pages": "^3.2.3"
   }
 }
